--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-switch": "^1.2.6",
+    "@types/html2canvas": "^0.5.35",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/og": "^0.8.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.554.0",
     "next": "^14.2.0",
     "react": "^18.3.0",
