--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "^14.2.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "redis": "^5.10.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
