--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.554.0",
     "next": "^16.0.10",
+    "next-auth": "^4.24.13",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "redis": "^5.10.0",
